@@ -58,7 +58,6 @@
     <File name="MonoDevelop.XmlEditor.Gui/XmlSchemasPanelWidget.cs" subtype="Code" buildaction="Compile" />
     <File name="gtk-gui/MonoDevelop.XmlEditor.Gui.XmlSchemasPanelWidget.cs" subtype="Code" buildaction="Compile" />
     <File name="MonoDevelop.XmlEditor.Gui/XmlSchemasPanel.cs" subtype="Code" buildaction="Compile" />
-    <File name="MonoDevelop.XmlEditor/ClosingBracketCompletionDataProvider.cs" subtype="Code" buildaction="Compile" />
     <File name="MonoDevelop.XmlEditor.Completion/XmlSchemaCompletionData.cs" subtype="Code" buildaction="Compile" />
     <File name="MonoDevelop.XmlEditor.Completion/XmlSchemaCompletionDataCollection.cs" subtype="Code" buildaction="Compile" />
     <File name="MonoDevelop.XmlEditor.Completion/XmlCompletionDataProvider.cs" subtype="Code" buildaction="Compile" />
@@ -69,6 +68,7 @@
     <File name="MonoDevelop.XmlEditor/XmlElementPath.cs" subtype="Code" buildaction="Compile" />
     <File name="MonoDevelop.XmlEditor/QualifiedNameCollection.cs" subtype="Code" buildaction="Compile" />
     <File name="Makefile.am" subtype="Code" buildaction="Nothing" />
+    <File name="MonoDevelop.XmlEditor.Completion/ClosingBracketCompletionDataProvider.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
@@ -85,11 +85,11 @@
     <ProjectReference type="Project" localcopy="False" refto="MonoDevelop.DesignerSupport" />
     <ProjectReference type="Project" localcopy="False" refto="MonoDevelop.SourceEditor2" />
     <ProjectReference type="Project" localcopy="False" refto="Mono.TextEditor" />
-    <ProjectReference type="Gac" localcopy="True" refto="glade-sharp, Version=2.8.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
-    <ProjectReference type="Gac" localcopy="True" refto="pango-sharp, Version=2.8.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
-    <ProjectReference type="Gac" localcopy="True" refto="atk-sharp, Version=2.8.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
-    <ProjectReference type="Gac" localcopy="True" refto="gdk-sharp, Version=2.8.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
-    <ProjectReference type="Gac" localcopy="True" refto="gtk-sharp, Version=2.8.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
+    <ProjectReference type="Gac" localcopy="True" refto="glade-sharp, Version=2.10.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
+    <ProjectReference type="Gac" localcopy="True" refto="pango-sharp, Version=2.10.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
+    <ProjectReference type="Gac" localcopy="True" refto="atk-sharp, Version=2.10.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
+    <ProjectReference type="Gac" localcopy="True" refto="gdk-sharp, Version=2.10.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
+    <ProjectReference type="Gac" localcopy="True" refto="gtk-sharp, Version=2.10.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
   </References>
   <GtkDesignInfo isWidgetLibrary="True" gtkVersion="2.8.3">
     <ExportedWidgets>
